@@ -15,6 +15,7 @@
 import wx
 from rur_py.translation import _
 import robot_factory
+import rur_py.misc as misc
 
 #---------------------------------------------------------------------------
 
@@ -218,7 +219,7 @@ class Visible_world(World):
                  beepers = {}, robot = {},
                 editWalls = False,
                 screen_offsets = (50, 50, 20, 40),
-                tile_info = (34, 6),
+                tile_info = (misc.SCREEN[4], misc.SCREEN[5]),
                 beeper_info = (20, 13, 6, 3),
                 wall_colours = ("black", "brown"),
                 edit_wall_colours = ("brown", "black"),
